Add media directory to .gitignore and remove media files from tracking - Prevents user uploads (PDFs, images) from being committed to repository

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,17 @@ venv/
 db.sqlite3
 staticfiles/
 
+# Media files (user uploads)
+media/
+media/*
+uploads/
+*.pdf
+*.jpg
+*.jpeg
+*.png
+*.gif
+*.webp
+
 # VS Code
 .vscode/
 
