--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,7 @@ django-filter==23.3
 Pillow==10.0.1
 python-decouple==3.8
 psycopg2-binary==2.9.7
+python-dateutil==2.8.2
+# PDF generation (optional but used if installed)
+reportlab==3.6.12
+weasyprint==60.2
