--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,5 @@ Pillow==9.5.0
 python-decouple==3.8
 psycopg2-binary==2.9.7
 python-dateutil==2.8.2
-# PDF generation (optional but used if installed)
+# PDF generation
 reportlab==3.6.12
-weasyprint==60.2
